<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">
    <TextView
        android:id="@+id/tvFromDateTime" android:text="@string/from"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etFromDateTime" android:layout_alignStart="@+id/btnCancel"
        android:textSize="24sp" />
    <EditText
        android:id="@+id/etFromDateTime" android:inputType="date"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentEnd="true" android:layout_alignParentTop="true"
        android:layout_marginTop="38dp" android:ems="10" android:textSize="24sp" />
    <TextView
        android:id="@+id/tvToDateTime" android:text="@string/to"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentTop="true" android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_marginTop="98dp" android:textSize="24sp" />

    <EditText
        android:id="@+id/etToDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvToDateTime"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="182dp"
        android:text="@string/latitude"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvLatitude"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="508dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="238dp"
        android:text="@string/longitude"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvLongitude"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="226dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="452dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvKeywords" android:text="@string/keywords"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvFromDateTime" android:layout_centerVertical="true"
        android:textSize="24sp" />
    <EditText
        android:id="@+id/etKeywords" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignStart="@+id/go"
        android:layout_centerVertical="true" android:ems="10"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnCancel" android:text="@string/cancel" android:onClick="cancel"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="55dp" />
    <Button
        android:id="@+id/go" android:onClick="go" android:text="@string/go"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentEnd="true" android:layout_alignTop="@+id/btnCancel"
        android:layout_marginEnd="128dp" />
</RelativeLayout>